--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "cookie": "^0.6.0",
     "input-otp": "^1.1.0",
     "js-cookie": "^3.0.5",
-    "next": "14.1.0",
+    "next": "14.1.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-loader-spinner": "^6.1.6",
     "react-sanctum": "^3.0.0",
+    "sharp": "^0.33.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
