--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.99.3",
     "@react-three/fiber": "^8.15.16",
     "@syncfusion/ej2-react-schedule": "^24.2.4",
+    "@tanstack/react-query": "^5.31.0",
     "@tanstack/react-table": "^8.15.3",
     "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
@@ -29,6 +32,7 @@
     "cookie": "^0.6.0",
     "input-otp": "^1.1.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.367.0",
     "next": "14.1.4",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -51,9 +55,11 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "laravel-echo": "^1.16.1",
     "postcss": "^8",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "pusher-js": "^8.4.0-rc2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
