--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-BACKEND_URL=http://localhost:8000
+#BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
