--- a/package.json
+++ b/package.json
@@ -9,42 +9,74 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.3.4",
+    "@photo-sphere-viewer/core": "^5.7.3",
+    "@photo-sphere-viewer/gallery-plugin": "^5.7.3",
+    "@photo-sphere-viewer/markers-plugin": "^5.7.3",
+    "@photo-sphere-viewer/virtual-tour-plugin": "^5.7.3",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-pdf/renderer": "^3.4.4",
     "@react-three/drei": "^9.99.3",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/xr": "^5.7.1",
+    "@sketchfab/viewer-api": "^1.12.1",
     "@syncfusion/ej2-react-schedule": "^24.2.4",
     "@tanstack/react-query": "^5.31.0",
     "@tanstack/react-table": "^8.15.3",
     "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.12",
     "@types/three": "^0.161.2",
+    "@types/uuid": "^9.0.8",
+    "@zappar/zappar-react-three-fiber": "^2.4.9",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
     "cookie": "^0.6.0",
+    "embla-carousel-react": "^8.1.3",
+    "filepond": "^4.31.1",
+    "filepond-plugin-file-poster": "^2.5.1",
+    "filepond-plugin-image-edit": "^1.6.3",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "framer-motion": "^11.2.10",
     "input-otp": "^1.1.0",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.367.0",
-    "next": "14.1.4",
+    "next": "^14.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "^7.51.0",
+    "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-pdf-tailwind": "^2.3.0",
+    "react-photo-sphere-viewer": "^5.0.2-psv5.7.1",
     "react-sanctum": "^3.0.0",
+    "recharts": "^2.12.7",
     "sharp": "^0.33.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.161.0",
+    "use-debounce": "^10.0.1",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
