--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 #BACKEND_URL=http://localhost:8000
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
 NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_AWS_HOSTNAME=
