--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-casas",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -33,7 +33,6 @@
     "@react-three/fiber": "^8.15.16",
     "@react-three/xr": "^5.7.1",
     "@sketchfab/viewer-api": "^1.12.1",
-    "@syncfusion/ej2-react-schedule": "^24.2.4",
     "@tanstack/react-query": "^5.31.0",
     "@tanstack/react-table": "^8.15.3",
     "@types/cookie": "^0.6.0",
@@ -47,6 +46,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "cookie": "^0.6.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
     "filepond": "^4.31.1",
     "filepond-plugin-file-poster": "^2.5.1",
@@ -61,6 +61,7 @@
     "next": "^14.2",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-big-calendar": "^1.13.3",
     "react-dom": "^18",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.51.0",
@@ -83,6 +84,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
