--- a/package.json
+++ b/package.json
@@ -11,90 +11,90 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@photo-sphere-viewer/core": "^5.7.3",
-    "@photo-sphere-viewer/gallery-plugin": "^5.7.3",
-    "@photo-sphere-viewer/markers-plugin": "^5.7.3",
-    "@photo-sphere-viewer/virtual-tour-plugin": "^5.7.3",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@hookform/resolvers": "^3.9.0",
+    "@photo-sphere-viewer/core": "^5.9.0",
+    "@photo-sphere-viewer/gallery-plugin": "^5.9.0",
+    "@photo-sphere-viewer/markers-plugin": "^5.9.0",
+    "@photo-sphere-viewer/virtual-tour-plugin": "^5.9.0",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-pdf/renderer": "^3.4.4",
-    "@react-three/drei": "^9.99.3",
-    "@react-three/fiber": "^8.15.16",
+    "@react-three/drei": "^9.111.2",
+    "@react-three/fiber": "^8.17.5",
     "@react-three/xr": "^5.7.1",
     "@sketchfab/viewer-api": "^1.12.1",
-    "@tanstack/react-query": "^5.31.0",
-    "@tanstack/react-table": "^8.15.3",
+    "@tanstack/react-query": "^5.52.1",
+    "@tanstack/react-table": "^8.20.1",
     "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.12",
     "@types/three": "^0.161.2",
     "@types/uuid": "^9.0.8",
     "@zappar/zappar-react-three-fiber": "^2.4.9",
-    "axios": "^1.6.7",
+    "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "cmdk": "^0.2.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^0.2.1",
     "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.1.3",
-    "filepond": "^4.31.1",
+    "embla-carousel-react": "^8.2.0",
+    "filepond": "^4.31.2",
     "filepond-plugin-file-poster": "^2.5.1",
     "filepond-plugin-image-edit": "^1.6.3",
     "filepond-plugin-image-preview": "^4.6.12",
-    "framer-motion": "^11.2.10",
-    "input-otp": "^1.1.0",
+    "framer-motion": "^11.3.29",
+    "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.367.0",
-    "next": "^14.2",
+    "next": "^14.2.6",
     "next-themes": "^0.2.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-big-calendar": "^1.13.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
-    "react-hook-form": "^7.51.0",
+    "react-hook-form": "^7.52.2",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-pdf-tailwind": "^2.3.0",
-    "react-photo-sphere-viewer": "^5.0.2-psv5.7.1",
+    "react-photo-sphere-viewer": "5.0.2-psv5.7.1",
     "react-sanctum": "^3.0.0",
     "recharts": "^2.12.7",
-    "sharp": "^0.33.3",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.1",
+    "sharp": "^0.33.5",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.161.0",
-    "use-debounce": "^10.0.1",
+    "use-debounce": "^10.0.3",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.16.1",
+    "@types/react": "^18.3.4",
     "@types/react-big-calendar": "^1.8.9",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "laravel-echo": "^1.16.1",
-    "postcss": "^8",
-    "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "pusher-js": "^8.4.0-rc2",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "pusher-js": "8.4.0-rc2",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
   }
 }
